Completed Week 8. Add body-parser and implement registration and search routes

--- a/topic4/htmlExpress/views/search.html
+++ b/topic4/htmlExpress/views/search.html
@@ -8,11 +8,11 @@
         <p>This is an example of a paragraph inside the search page</p>
     </body>
 
-    <form action="/search" method="GET">
+    <form action="/search-result" method="GET">
         <input
             id="search-box"
             type="text"
-            name="search-keyword"
+            name="keyword"
             value="Default"
         />
         <input type="submit" value="OK" />
