--- a/Midterm/views/add-user.ejs
+++ b/Midterm/views/add-user.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  type="text/css" href="/main.css" />
-    <title>Add User</title>
-</head>
-<body>
-    <h1>Add User</h1>
-    <form action="add-user" method="post">
-        <p>User: <input id="user" type="text" name="user_name" /></p>
-        <button type="submit">Create a new user record</button>
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="/main.css" />
+        <title>Add User</title>
+    </head>
+    <body>
+        <h1>Add User</h1>
+        <form action="add-user" method="post">
+            <p>User: <input id="user" type="text" name="user_name" /></p>
+            <button type="submit">Create a new user record</button>
+        </form>
+        <br />
+        <a href="/users/home">User Home Page</a>
+    </body>
 </html>
