Add event management functionality with new event creation and database schema

--- a/Midterm/views/org-home.ejs
+++ b/Midterm/views/org-home.ejs
@@ -13,5 +13,11 @@
 
         <!-- Link to the org-setting page -->
         <a href="/organizer/settings">Organiser Settings Page</a>
+        <br />
+        <br />
+        <!-- New event button. This button takes me to the org-new-event page-->
+        <form action="/organizer/new-event" method="get">
+            <button type="submit">New Event</button>
+        </form>
     </body>
 </html>
